--- a/index.html
+++ b/index.html
@@ -34,11 +34,9 @@
     </div>
 
   </div>
-  <audio controls autoplay loop>
+  <!--<audio controls autoplay loop>
     <source src="sounds/Rakim - Guess Who's Back.mp3" type="audio/ogg" <source src="sounds/Rakim - Guess Who's Back.mp3"
-      type="audio/mpeg">
-
-  </audio>
+      type="audio/mpeg"></audio>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="game.js" charset="utf-8"></script>
 </body>
